name:                yesod-comments
version:             0.3.0
synopsis:            A generic comments interface for a Yesod application
homepage:            http://github.com/pbrisbin/yesod-comments
license:             BSD3
license-file:        LICENSE
author:              Patrick Brisbin
maintainer:          me@pbrisbin.com
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.2

library
  -- Modules exported by the library.
  exposed-modules: Yesod.Comments
                 , Yesod.Comments.Core
                 , Yesod.Comments.Storage
                 , Yesod.Comments.Filters
  
  -- Packages needed in order to build this package.
  build-depends: base
               , text
               , time
               , directory
               , bytestring
               , wai
               , yesod
               , yesod-auth
               , yesod-form
               , yesod-goodies
               , persistent
               , persistent-template
  
  ghc-options: -Wall
  
source-repository head
  type:         git
  location:     git://github.com/pbrisbin/yesod-comments.git
  
