name:                yesod-comments
version:             0.6.1
synopsis:            A generic comments interface for a Yesod application
description:         A generic comments interface for a Yesod application
homepage:            http://github.com/pbrisbin/yesod-comments
license:             BSD3
license-file:        LICENSE
author:              Patrick Brisbin
maintainer:          me@pbrisbin.com
category:            Web, Yesod
build-type:          Simple
cabal-version:       >=1.6

library
  -- Modules exported by the library.
  exposed-modules: Yesod.Comments
                 , Yesod.Comments.Core
                 , Yesod.Comments.Storage
                 , Yesod.Comments.Management
  
  -- Packages needed in order to build this package.
  build-depends: base           >= 4     && < 5
               , text           >= 0.11  && < 0.12
               , bytestring     >= 0.9.1 && < 0.10
               , friendly-time  >= 0.1   && < 0.3
               , gravatar       >= 0.4   && < 0.5
               , persistent     >= 0.8   && < 0.9
               , wai            >= 1.1   && < 1.2
               , yesod          >= 0.10  && < 0.11
               , yesod-auth     >= 0.8   && < 0.9
               , yesod-form     >= 0.4   && < 0.5
               , yesod-markdown >= 0.3   && < 0.4

               , template-haskell
               , directory
               , time
               , old-locale

  ghc-options: -Wall
  
source-repository head
  type:         git
  location:     git://github.com/pbrisbin/yesod-comments.git
